# DLTweakerRework

./: .gitignore  index.html  package-lock.json  package.json  splash.html  vite.config.ts
.cursor/rules/: run-app-after-changes.mdc
.github/workflows/: publish-rework.yml  quick-patch-verify.yml
public/: quick-patch-changelog.json  release-notes.en.json  release-notes.json
quick-patch/: manifest.json  overlay.css
scripts/: qp-sync.mjs
src/: deadlock-app.ts  i18n.ts  main.ts  mm-views.ts  mod-manager.ts  mode-switcher.ts  release-notes.ts  splash.css  splash.ts  styles.css  updates-panel.ts
src-tauri/: Cargo.toml  tauri.conf.json  updating.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: app_restore.rs  game_config.rs  lib.rs  main.rs  mod_manager.rs  quick_patch.rs
